...
    <string name="menu_budget_open">Открыть распределение монет</string>
    <string name="menu_budget_expand">Развернуть статьи бюджета</string>
    <string name="menu_budget_collapse">Свернуть статьи бюджета</string>
    <string name="menu_goal_label">ЦЕЛЬ:</string>
    <string name="menu_current_goal">Наблюдение за звёздами</string>
    <string name="menu_goal_progress">%1$d из %2$d</string>
    <string name="menu_coins">МОНЕТЫ</string>
    <string name="menu_coins_accessibility">Монеты: %1$d</string>
    <string name="menu_village">Деревня</string>
    <string name="menu_gear">Снаряжение</string>
    <string name="menu_tasks">Дела</string>
    <string name="menu_goal">Цель</string>
    <string name="menu_continue">Продолжить день</string>
    <string name="menu_fox_description">%1$s - питомец с рюкзаком</string>
    <string name="menu_pet_plain">%1$s - питомец без аксессуаров</string>
    <string name="menu_pet_bandana">%1$s - питомец в бандане</string>
    <string name="menu_pet_glasses">%1$s - питомец в очках</string>
    <string name="menu_pet_hat">%1$s - питомец в шляпе</string>
    <string name="menu_pet_cap">%1$s - питомец в кепке</string>
...
